@@ -6,24 +6,27 @@ use version; our $VERSION = qv( sprintf '0.3.%d', q$Rev$ =~ /\d+/gmx );
 
 use Module::Build;
 
-my $requires = { 'perl'                  => '5.008',
-                 'parent'                => '0.221',
-                 'version'               => '0.74',
-                 'Cache::Memcached'      => '1.24',
-                 'Class::Accessor::Fast' => '0.31',
-                 'Class::MOP'            => '0.84',
-                 'Class::Null'           => '1.09',
-                 'Data::Serializer'      => '0.46',
-                 'Date::Format'          => '2.22',
-                 'Exception::Class'      => '1.23',
-                 'IO::AtomicFile'        => '2.110',
-                 'IO::File'              => '1.14',
-                 'IPC::SysV'             => '1.04',
-                 'IPC::ShareLite'        => '0.13',
-                 'List::Util'            => '1.19',
-                 'Storable'              => '2.15',
-                 'Time::Elapsed'         => '0.10',
-                 'Time::HiRes'           => '1.9711' };
+my $requires = {
+   'perl'                  => '5.008',
+   'parent'                => '0.221',
+   'version'               => '0.74',
+   'Cache::Memcached'      => '1.24',
+   'Class::Accessor::Fast' => '0.31',
+   'Class::MOP'            => '0.84',
+   'Class::Null'           => '1.09',
+   'Data::Serializer'      => '0.46',
+   'Date::Format'          => '2.22',
+   'Exception::Class'      => '1.23',
+   'IO::AtomicFile'        => '2.110',
+   'IO::File'              => '1.14',
+   'IPC::SysV'             => '1.04',
+   'IPC::ShareLite'        => '0.13',
+   'List::Util'            => '1.19',
+   'Storable'              => '2.15',
+   'Time::Elapsed'         => '0.10',
+   'Time::HiRes'           => '1.9711',
+   'TryCatch'              => '1.002000',
+};
 my $build = Module::Build->new
    ( add_to_cleanup     => [ 'Debian_CPANTS.txt',
                              'IPC-SRLock-*',
